<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coloured_lines_light"
    tools:context=".AdminLogin">

    <EditText
        android:id="@+id/et_admin_login_email"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="71dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_admin_login_id" />

    <EditText
        android:id="@+id/et_admin_login_id"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Admin ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_user_login" />

    <EditText
        android:id="@+id/et_admin_login_pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="81dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_admin_login_email" />

    <Button
        android:id="@+id/btn_admin_sign_in"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="127dp"
        android:text="Sign in"
        app:backgroundTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_admin_login_pass" />

    <ImageView
        android:id="@+id/iv_logo_user_login"
        android:layout_width="174dp"
        android:layout_height="172dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="101dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_admin_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Forgot password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_admin_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>