<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coloured_lines_light"
    tools:context=".AdminLogin">

    <EditText
        android:id="@+id/tv_user_login_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="71dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_user_login" />

    <EditText
        android:id="@+id/tv_user_login_pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_login_email" />

    <TextView
        android:id="@+id/tv_user_sign_up"
        android:layout_width="248dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="Don't have an account yet?"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_user_sign_in"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/tv_user_login_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="106dp"
        android:linksClickable="false"
        android:text="Forgot my password "
        android:textColor="@color/teal_700"
        android:textColorLink="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_user_sign_in" />

    <Button
        android:id="@+id/btn_user_sign_in"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="127dp"
        android:text="Sign in"
        app:backgroundTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_login_pass" />

    <ImageView
        android:id="@+id/iv_logo_user_login"
        android:layout_width="174dp"
        android:layout_height="172dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_user_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_login_forgot_pass"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>